@@ -38,12 +38,12 @@
   h = _h;
 }
 
-- (void) sizeToString: (gchar *) _text
+- (void) sizeToString: (NSString *) _text
 {
   int textw, texth;
   int iconw;
 
-  a_text->texture[0].data.text.string = _text;
+  a_text->texture[0].data.text.string = (char*)[_text UTF8String];
   RrMinsize(a_text, &textw, &texth);
   /*XXX textw += ob_rr_theme->bevel * 2;*/
   texth += ob_rr_theme->padding * 2;
@@ -58,7 +58,7 @@
   a_text->texture[0].data.text.justify = align;
 }
 
-- (void) showText: (gchar *) _text
+- (void) showText: (NSString *) _text
 {
     int l, t, r, b;
     int _x, _y, _w, _h;
@@ -79,7 +79,7 @@
     XSetWindowBorder(ob_display, bg, ob_rr_theme->b_color->pixel);
 
     /* set up the textures */
-    a_text->texture[0].data.text.string = _text;
+    a_text->texture[0].data.text.string = (char*)[_text UTF8String];
 
     /* measure the shit out */
     RrMinsize(a_text, &textw, &texth);
@@ -239,7 +239,7 @@
   RrPaint(a_icon, icon, pw, ph);
 }
 
-- (void) showText: (gchar *) _text icon: (AZClientIcon *) _icon
+- (void) showText: (NSString *) _text icon: (AZClientIcon *) _icon
 {
   if (_icon) {
     a_icon->texture[0].type = RR_TEXTURE_RGBA;
@@ -385,7 +385,7 @@
     }
 }
 
-- (void) showText: (gchar *) _text desktop: (unsigned int) desk
+- (void) showText: (NSString *) _text desktop: (unsigned int) desk
 {
     unsigned int i;
     unsigned int num_desktops = [[AZScreen defaultScreen] numberOfDesktops];
